--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,6 +3,7 @@
   <a href="../index.html">Sleep<span class="highlight">Outside</span></a>
 </div>
 <div class="search-bar">
+  <label for="item-search">Search our Outdoor Listings:</label>
   <input id="item-search" type="text" placeholder="Search Products...">
   <button id="search-button">Search</button>
 </div>
