--- a/src/css/style.css
+++ b/src/css/style.css
@@ -330,9 +330,33 @@ button {
   grid-column: 2;
 }
 
-.cart-card__quantity {
+.cart-card__quantity-controls {
   grid-row: 1;
   grid-column: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1em;
+}
+
+.cart-card__quantity {
+  margin: 0;
+  padding: 0 0.5rem;
+}
+
+.quantity-btn {
+  padding: 0.2rem 0.5rem;
+  font-size: 1rem;
+  background-color: var(--secondary-color);
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin: 0;
+  display: inline;
+}
+
+.quantity-btn:hover {
+  background-color: var(--tertiary-color);
 }
 
 .cart-remove {
