--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
 </div>
 <div class="search-bar">
   <label for="item-search">Search our Outdoor Listings:</label>
-  <input id="item-search" type="text" placeholder="Search Products...">
+  <input id="item-search" type="text" placeholder="Search Products..." />
   <button id="search-button">Search</button>
 </div>
 <div class="cart">
