--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <img src="/images/noun_Tent_2517.svg" alt="tent image for logo" />
   <a href="../index.html">Sleep<span class="highlight">Outside</span></a>
 </div>
-<div class="search-bar">
+<div class="search-bar" id="desktop-search">
   <label for="item-search">Search our Outdoor Listings:</label>
   <input id="item-search" type="text" placeholder="Search Products..." />
   <button id="search-button">Search</button>
