--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,7 +42,7 @@ p {
 
 .logo {
   line-height: 60px;
-  width: 245px;
+  width: 100%;
   overflow: hidden;
   display: flex;
   font-size: 30px;
@@ -120,7 +120,9 @@ button {
   border-radius: 50px;
   align-items: center;
   text-align: center;
-  margin: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  padding:0.25em;
 }
 
 #desktop-search {
@@ -453,10 +455,14 @@ button {
   text-align: right;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 760px) {
   body {
     max-width: 1080px;
     margin: auto;
+  }
+
+  .logo {
+    max-width: 35%;
   }
 
   .mission {
@@ -469,6 +475,7 @@ button {
   }
   #desktop-search {
     display: block;
+    margin-right: 10em;
   }
 
   #mobile-search {
