Style Changes w/Kim and Quadri

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -444,7 +444,7 @@ button {
 }
 
 .cart-discount,
-#cart-discount {
+#cart-discount, .individual-discount {
   color: #e53935; /* red */
   font-weight: 600;
   text-align: right;
