--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,7 +122,7 @@ button {
   text-align: center;
   margin-top: 1em;
   margin-bottom: 1em;
-  padding:0.25em;
+  padding: 0.25em;
 }
 
 #desktop-search {
@@ -444,7 +444,8 @@ button {
 }
 
 .cart-discount,
-#cart-discount, .individual-discount {
+#cart-discount,
+.individual-discount {
   color: #e53935; /* red */
   font-weight: 600;
   text-align: right;
