--- a/src/css/style.css
+++ b/src/css/style.css
@@ -560,20 +560,19 @@ footer {
 /* Styles for the Welcome Modal     */
 
 .modal-overlay {
-  display: none; 
-  position: fixed; 
-  z-index: 1000; 
+  display: none;
+  position: fixed;
+  z-index: 1000;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.6); 
-  
+  background-color: rgba(0, 0, 0, 0.6);
+
   justify-content: center;
   align-items: center;
 }
-
 
 .modal-content {
   background-color: #fefefe;
@@ -583,21 +582,26 @@ footer {
   width: 90%;
   max-width: 500px;
   border-radius: 8px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow:
+    0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   position: relative;
-  
-  animation-name: animatetop;
-  animation-duration: 0.4s
-}
 
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
 
 @keyframes animatetop {
-  from {top: -300px; opacity: 0}
-  to {top: 0; opacity: 1}
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
 }
-
-
 
 .close-btn {
   color: #aaa;
@@ -615,10 +619,9 @@ footer {
   cursor: pointer;
 }
 
-
 .btn-register {
   display: inline-block;
-  background-color: #5c946e; 
+  background-color: #5c946e;
   color: white;
   padding: 12px 25px;
   margin-top: 15px;
@@ -631,4 +634,3 @@ footer {
 .btn-register:hover {
   background-color: #4a7858;
 }
-
